[package]
name = "DucksBedtimeBot"
version = "0.1.0"
authors = ["Frangi <vincent.frangi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.6", features = ["full"] }
telegram-bot = "0.7"
futures = "0.3.5"